# code3

./: .gitignore  CMakeLists.txt  README.md  code3.c3workspace
code3/: CMakeLists.txt  code3.c3workspace
code3/cmake/: c3.desktop.cmake  c3_sysconfig.h.cmake
code3/data/: CMakeLists.txt
code3/data/colors/: dark.c3colors  gray.c3colors  light.c3colors  light2.c3colors
code3/data/images/completion/: build.sh
code3/data/images/dock/: build.sh
code3/data/images/externalcommand/: build.sh
code3/data/images/flat/: build.sh
code3/data/images/icon/: build.sh
code3/data/images/new/: build.sh
code3/src/: CMakeLists.txt
code3/src/core/: C3AlertSource.cpp  C3AlertSource.h  C3Application.cpp  C3Application.h  C3CentralWidget.cpp  C3CentralWidget.h  C3ExternalToolManager.cpp  C3ExternalToolManager.h  C3GeneralActions.cpp  C3GeneralActions.h  C3MainWindow.cpp  C3MainWindow.h  C3PixmapCache.cpp  C3PixmapCache.h  c3_config.h  c3_main.cpp
code3/src/dock/: C3DockFileBrowser.cpp  C3DockFileBrowser.h  C3DockTextConsole.cpp  C3DockTextConsole.h  C3DockWidgetTitleBar.cpp  C3DockWidgetTitleBar.h  C3DockWorkspaceBrowser.cpp  C3DockWorkspaceBrowser.h
code3/src/editor/: C3Editor.cpp  C3Editor.h  C3EditorFactory.cpp  C3EditorFactory.h  C3EditorFormat.cpp  C3EditorFormat.h
code3/src/editor/image/: C3ImageEditor.cpp  C3ImageEditor.h  C3ImageEditorFactory.cpp  C3ImageEditorFactory.h  C3ImageEditorView.cpp  C3ImageEditorView.h
code3/src/editor/text/: C3TextEditorCoreData.h  C3TextEditorFactory.cpp  C3TextEditorFactory.h  C3TextEditorFontMetricsUtils.h  C3TextEditorLine.cpp  C3TextEditorLine.h  C3TextEditorMargin.cpp  C3TextEditorMargin.h  C3TextEditorRange.h  C3TextEditorRowColumn.h  C3TextEditorSymbolContext.cpp  C3TextEditorSymbolContext.h  C3TextEditorSymbolInfo.h  C3TextEditorUndo.cpp  C3TextEditorUndo.h  C3TextEditorViewport.cpp  C3TextEditorViewport.h
code3/src/editor/text/completion/: C3TextEditorCompletion.h  C3TextEditorCompletionWidget.cpp  C3TextEditorCompletionWidget.h
code3/src/editor/text/editor/: C3TextEditor.cpp  C3TextEditor.h  C3TextEditor_completion.cpp  C3TextEditor_coordinates.cpp  C3TextEditor_copyPaste.cpp  C3TextEditor_cursor.cpp  C3TextEditor_find.cpp  C3TextEditor_fx.cpp  C3TextEditor_insertDelete.cpp  C3TextEditor_link.cpp  C3TextEditor_private.h  C3TextEditor_read.cpp  C3TextEditor_symbol.cpp  C3TextEditor_undo.cpp
code3/src/editor/text/format/: C3TextEditorFormat.cpp  C3TextEditorFormat.h  C3TextEditorFormatReader.cpp  C3TextEditorFormatReader.h  C3TextEditorFormatWriter.cpp  C3TextEditorFormatWriter.h
code3/src/editor/text/mode/: C3TextEditorMode.cpp  C3TextEditorMode.h  C3TextEditorModeParser.cpp  C3TextEditorModeParser.h  C3TextEditorModeWithInterLineState.cpp  C3TextEditorModeWithInterLineState.h  C3TextEditorModeWithSymbolAnalysis.cpp  C3TextEditorModeWithSymbolAnalysis.h
code3/src/editor/text/options/: C3TextEditorOptions.cpp  C3TextEditorOptions.h  C3TextEditorOptionsColors.cpp  C3TextEditorOptionsColors.h  C3TextEditorOptionsColorsGenerator.js  C3TextEditorOptionsWidgetColors.cpp  C3TextEditorOptionsWidgetColors.h  C3TextEditorOptionsWidgetFonts.cpp  C3TextEditorOptionsWidgetFonts.h
code3/src/externalcommand/: C3ExternalCommand.cpp  C3ExternalCommand.h  C3ExternalCommandEditorWidget.cpp  C3ExternalCommandEditorWidget.h  C3ExternalCommandManager.cpp  C3ExternalCommandManager.h
code3/src/find/: C3FindOperation.cpp  C3FindOperation.h  C3FindTarget.cpp  C3FindTarget.h  C3FindWidget.cpp  C3FindWidget.h
code3/src/lib/symbol/manager/: C3SymbolManager.cpp  C3SymbolManager.h  C3SymbolManagerBase.cpp  C3SymbolManagerBase.h  C3SymbolManagerClassDescription.h  C3SymbolManagerSymbolDescription.h
code3/src/lib/symbol/symbol/: C3Symbol.cpp  C3Symbol.h  C3SymbolClass.cpp  C3SymbolClass.h  C3SymbolFunctionDefinition.cpp  C3SymbolFunctionDefinition.h  (+14 more)
code3/src/lib/system/: C3Process.cpp  C3Process.h
code3/src/lib/tools/: C3CompletionStore.cpp  C3CompletionStore.h  C3FileSnippetExtractorWorker.cpp  C3FileSnippetExtractorWorker.h
code3/src/lib/ui/: C3RichTextItemDelegate.cpp  C3RichTextItemDelegate.h  C3TextOutputWidget.cpp  C3TextOutputWidget.h
code3/src/lib/utils/: C3DebugContext.cpp  C3DebugContext.h  C3FileUtils.cpp  C3FileUtils.h  C3JsonUtils.cpp  C3JsonUtils.h  C3StringUtils.cpp  C3StringUtils.h
code3/src/link/: C3Link.cpp  C3Link.h  C3LinkHistory.cpp  C3LinkHistory.h  C3LinkSelectionDialog.cpp  C3LinkSelectionDialog.h
code3/src/message/: C3MessageContainerWidget.cpp  C3MessageContainerWidget.h  C3MessageWidget.cpp  C3MessageWidget.h
code3/src/new/: C3NewDialog.cpp  C3NewDialog.h  C3NewObjectCreator.cpp  C3NewObjectCreator.h
code3/src/new/creator/: C3NewObjectUtils.cpp  C3NewObjectUtils.h
code3/src/qdarkstyle/: style.qss
code3/src/settings/: C3Settings.cpp  C3Settings.h
code3/src/settings/dialog/: C3SettingsDialog.cpp  C3SettingsDialog.h  C3SettingsWidgetFileHeader.cpp  C3SettingsWidgetFileHeader.h  C3SettingsWidgetUser.cpp  C3SettingsWidgetUser.h
code3/src/settings/highlighting/: C3SettingsUserHighlightingSet.cpp  C3SettingsUserHighlightingSet.h  C3SettingsUserHighlightingSetOptionsWidget.cpp  C3SettingsUserHighlightingSetOptionsWidget.h
code3/src/workspace/: C3Workspace.cpp  C3Workspace.h  C3Workspace_fileScan.cpp  C3Workspace_openFile.cpp  C3Workspace_private.h
code3/src/workspace/properties/: C3WorkspacePropertiesDialog.cpp  C3WorkspacePropertiesDialog.h  C3WorkspacePropertiesWidgetExternalCommands.cpp  C3WorkspacePropertiesWidgetExternalCommands.h  C3WorkspacePropertiesWidgetExternalPaths.cpp  C3WorkspacePropertiesWidgetExternalPaths.h  C3WorkspacePropertiesWidgetFileHeader.cpp  C3WorkspacePropertiesWidgetFileHeader.h  C3WorkspacePropertiesWidgetGeneral.cpp  C3WorkspacePropertiesWidgetGeneral.h
code3/src/workspace/worker/: C3WorkspaceFileScanWorker.cpp  C3WorkspaceFileScanWorker.h  C3WorkspaceOpenFileWorker.cpp  C3WorkspaceOpenFileWorker.h
code3tags/: CMakeLists.txt  README  copy-dist.sh
code3tags/cmake/: config.h.cmake
code3tags/src/: CMakeLists.txt
code3tags/src/main/: parse.c  parsers_p.h  repoinfo.h
(+183 files in other folders)
